# streamdeck-basic

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: generate_placeholders.py
config/: example.yaml
streamdeck_basic/: __init__.py  __main__.py  actions.py  animation.py  config.py  controller.py  renderer.py
streamdeck_runner/: __init__.py  __main__.py  actions.py  animation.py  config.py  controller.py  renderer.py
systemd/: streamdeck.service
tests/: test_actions.py  test_animation.py  test_config.py  test_controller.py  test_resilience.py
udev/: 70-streamdeck.rules
