[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "streamdeck-basic"
version = "0.1.0"
description = "Drive an Elgato Stream Deck from a YAML config on Linux."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "streamdeck>=0.9.5",
    "pillow>=9",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
streamdeck-basic = "streamdeck_basic.__main__:main"

[tool.setuptools]
packages = ["streamdeck_basic"]
